horizontal scroll fix

--- a/app/assets/less/global.less
+++ b/app/assets/less/global.less
@@ -9,7 +9,7 @@
 
 body {
   background: @radar-blue; 
-  overflow-x: hidden;
+  overflow: hidden;
   text-align: center;
   min-width: @landing-unit-size * 3;
 }
